--- a/app/views/phone_items/_form.html.erb
+++ b/app/views/phone_items/_form.html.erb
@@ -2,20 +2,21 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.association :user %>
+    <%#= f.association :user %>
+    <%= f.input :user_id, as: :hidden, input_html: {value: current_user.id} %>
     <%= f.input :mobile %>
-    <%= f.input :source_name %>
+    <%#= f.input :source_name %>
     <%= f.input :name %>
-    <%= f.input :city %>
-    <%= f.input :area %>
-    <%= f.input :description %>
-    <%= f.input :note %>
-    <%= f.input :is_processed %>
-    <%= f.input :send_count %>
-    <%= f.input :account_id %>
+    <%#= f.input :city %>
+    <%#= f.input :area %>
+    <%#= f.input :description %>
+    <%#= f.input :note %>
+    <%#= f.input :is_processed %>
+    <%#= f.input :send_count %>
+    <%#= f.input :account_id %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: 'btn btn-primary btn-large'  %>
   </div>
 <% end %>
