--- a/app/views/sms_tmps/_form.html.erb
+++ b/app/views/sms_tmps/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @sms_tmp, html: { class: 'form-horizontal' }  do |f| %>
+<%= simple_form_for @sms_tmp do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
