--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -5,7 +5,7 @@
   <body data-spy='scroll' style='padding-top:60px;padding-bottom:60px' target='.flatty-sidebar'>
     <!--header start-->
 		<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
+			<div class="navbar-inner">
 		  <div class="container">
 		      <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
 		          <span class="icon-bar"></span>
@@ -29,8 +29,7 @@
 		              </li>
 		          </ul>
 		      </div>
-		  </div>
-		</div>
+		  </div></div>
 		</div>
     <!--header end -->
     <%= render 'layouts/messages' %>
