--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -12,27 +12,45 @@
 		          <span class="icon-bar"></span>
 		          <span class="icon-bar"></span>
 		      </button>
-		      <a class="brand" href="./index.html">Flatty</a>
+		      <a class="brand" href="/page/about"><i class='icon-heart'></i> 65960</a>
 		      <div class="nav-collapse collapse">
 		          <ul class="nav">
 		              <li class="">
-		                  <a href="./index.html">Home</a>
+		                  <a href="/page/about">关于</a>
 		              </li>
 		              <li class="">
-		                  <a href="./get_started.html">Get started</a>
+		                  <a href="/">开始使用</a>
 		              </li>
 		              <li class="">
-		                  <a href="./documentation.html">Documentation</a>
+		                  <a href="/page/documentation.html">教程</a>
 		              </li>
 		              <li class="">
-		                  <a href="./contact.html">Contact &amp; support</a>
+		                  <a href="/page/help.html">联系 &amp; 支持</a>
 		              </li>
 		          </ul>
 		      </div>
 		  </div></div>
 		</div>
     <!--header end -->
-    <%= render 'layouts/messages' %>
-    <%= yield %>
+    <div class='container'>
+    	<div class='row'>
+		    <%= render 'layouts/messages' %>
+		    <%= yield %>
+		</div>
+	</div>
+<!-- Duoshuo Comment BEGIN -->
+	<div class="ds-thread"></div>
+	<script type="text/javascript">
+	var duoshuoQuery = {short_name:"65960"};
+		(function() {
+			var ds = document.createElement('script');
+			ds.type = 'text/javascript';ds.async = true;
+			ds.src = 'http://static.duoshuo.com/embed.js';
+			ds.charset = 'UTF-8';
+			(document.getElementsByTagName('head')[0] 
+			|| document.getElementsByTagName('body')[0]).appendChild(ds);
+		})();
+	</script>
+<!-- Duoshuo Comment END -->	
   </body>
 </html>
