--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,11 @@
-<h1>Page#about</h1>
-<p>Find me in app/views/page/about.html.erb</p>
+
+        <div class='span12'>
+            <section>
+                <div class='page-header'>
+                    <h1>65960网站功能架构</h1>
+                </div>
+                <div class='lead'>我们的使命，以使你的工作更简单，更愉快，更富有成效的生活。我们期待着看到我们如何可以帮助您。</div>
+                <br>
+				<%=image_tag asset_path("doc/65960.com.png") %>
+			</section>
+		</div>
