--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -34,7 +34,7 @@
     </a>
 </li>
 <li>
-    <a href="#">
+    <a href="/home/email">
         <i class="icon-envelope"></i>
         <span>邮件通</span>
     </a>
