--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -90,7 +90,7 @@
                                             <i class="icon-user text-success"></i>
                                         </div>
                                         <div class="pull-left text">
-                                            John Doe signed up
+                                            Master signed up
                                             <small class="muted">just now</small>
                                         </div>
                                     </div>
@@ -165,17 +165,11 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="/user_profile.html">
-                                    <i class="icon-user"></i>
-                                    Profile
-                                </a>
+                                <%=link_to edit_user_registration_path(current_user) do %>
+                                    <i class="icon-cog"></i> 修改密码
+                                <% end %>
                             </li>
-                            <li>
-                                <a href="/user_profile.html">
-                                    <i class="icon-cog"></i>
-                                    Settings
-                                </a>
-                            </li>
+        
                             <li class="divider"></li>
                             <li>
                             <%= link_to destroy_user_session_path,  :method=>'delete', :title => "退出", :confirm => "确定要退出?" do%>
