--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,15 +16,15 @@
     </a>
 </li>
 <li>
-    <a href="/">
+    <a href="/user_details/0/edit">
         <i class="icon-user"></i>
-        <span>账号资源</span>
+        <span>基本信息</span>
     </a>
 </li>
 <li>
-    <a href="/">
-        <i class="icon-edit"></i>
-        <span>内容资源</span>
+    <a href="/sites/">
+        <i class="icon-sitemap"></i>
+        <span>站内通</span>
     </a>
 </li>
 <li>
@@ -158,12 +158,6 @@
     <a href="#">
         <i class="icon-money"></i>
         <span>付费通</span>
-    </a>
-</li>
-<li>
-    <a href="#">
-        <i class="icon-sitemap"></i>
-        <span>站内通</span>
     </a>
 </li>
 <li>
