--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,13 +1,17 @@
 <%%= simple_form_for(@<%= singular_table_name %>) do |f| %>
   <%%= f.error_notification %>
 
-  <div class="form-inputs">
+  <fieldset>
   <%- attributes.each do |attribute| -%>
     <%%= f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %> %>
   <%- end -%>
-  </div>
+  </fieldset>
 
-  <div class="form-actions">
-    <%%= f.button :submit %>
+  <div class='form-actions' style='margin-bottom: 0;'>
+      <div class='text-right'>
+          <%%= button_tag(type: 'submit', class: "btn btn-primary btn-large") do %>
+            <i class='icon-save'></i> 提交
+          <%% end %>
+      </div>
   </div>
 <%% end %>
