--- a/app/views/layouts/theme.html.erb
+++ b/app/views/layouts/theme.html.erb
@@ -13,7 +13,7 @@
 
     
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootswatch/3.0.0/cyborg/bootstrap.min.css" rel="stylesheet">
+    <link href="<%= @site.theme.css_url%>" rel="stylesheet">
     <%= javascript_include_tag "jquery" %>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <%#= stylesheet_link_tag "theme/1/css/theme" %>
@@ -42,18 +42,19 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand" href="#">Brand</a>
+	        <span class="navbar-brand"><%= @site.site_title %> </span>
+	        <%#= link_to @site.site_title, site_path(@site), :class => "navbar-brand" %>
 	      </div>
 	      <div class="navbar-collapse collapse navbar-responsive-collapse">
 	        <ul class="nav navbar-nav">
-	          <li class="active"><a href="#">Active</a></li>
-	          <li><a href="#">Link</a></li>
+	          <li><a href="#">关于我们</a></li>
+	          <li><a href="#">博文视点</a></li>
 	          <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">主题<b class="caret"></b></a>
 	            <ul class="dropdown-menu">
-	              <li><a href="#">Action</a></li>
-	              <li><a href="#">Another action</a></li>
-	              <li><a href="#">Something else here</a></li>
+	              <li><a href="#">移动互联网平台要靠内容赚钱</a></li>
+	              <li><a href="#">未来在“创意”方面创业会有更大发展</a></li>
+	              <li><a href="#">创业可以从写博客开始</a></li>
 	              <li class="divider"></li>
 	              <li class="dropdown-header">Dropdown header</li>
 	              <li><a href="#">Separated link</a></li>
@@ -65,15 +66,15 @@
 	          <input type="text" class="form-control col-lg-8" placeholder="Search">
 	        </form> -->
 	        <ul class="nav navbar-nav navbar-right">
-	          <li><a href="#">Link</a></li>
+	          <li><a href="#">留言</a></li>
 	          <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">联系 <b class="caret"></b></a>
 	            <ul class="dropdown-menu">
 	              <li><a href="#">Action</a></li>
 	              <li><a href="#">Another action</a></li>
 	              <li><a href="#">Something else here</a></li>
 	              <li class="divider"></li>
-	              <li><a href="#">Separated link</a></li>
+	              <li><a href="#">官方网站</a></li>
 	            </ul>
 	          </li>
 	        </ul>
