--- a/app/views/site_steps/content.html.erb
+++ b/app/views/site_steps/content.html.erb
@@ -68,7 +68,7 @@
 																	    <%= f.input :head, hint: "保存页头信息，如引用的css路径，js代码。", :input_html => {:class => "span12 icon-over-input"}, wrapper_html: { class: 'row-fluid' } %>
 
 																	    <%= f.input :header, :input_html => {:class => "span12 icon-over-input"}, wrapper_html: { class: 'row-fluid' } %>
-																	    <%= f.input :body, :input_html => {:class => "span12 icon-over-input"}, wrapper_html: { class: 'row-fluid' } %>
+																	    <%= f.input :body, :input_html => {:class => "span12 icon-over-input input-block-level wysihtml5"}, wrapper_html: { class: 'row-fluid', rows: '15', value: @site.user.user_detail.company_description } %>
 																	    <%= f.input :footer, :input_html => {:class => "span12 icon-over-input"}, wrapper_html: { class: 'row-fluid' } %>
 																	  </fieldset>
 																	<% end %>
