--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the theme controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.theme .container{
+	max-width: 800px;
+}
+.theme .main{
+	border-radius: 5px;
+}
+.theme .sidebar{
+  
+}
