--- a/app/views/layouts/theme.html.erb
+++ b/app/views/layouts/theme.html.erb
@@ -3,109 +3,57 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="Content-Language" content="zh-CN" />
-    <meta name="robots" content="INDEX,FOLLOW" />
-    <meta name="author" content="master@inruby.com" />
-    <!-- this enables responsive features in browser -->
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <title><%= yield(:title) %></title>
+    <meta name="keywords" content= "<%= yield(:meta_keywords) %>">
+    <meta name="description" content="<%= yield(:meta_description) %>">
 
-    <title><%= content_for?(:title) ? yield(:title) : Rails.application.name %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : Rails.application.name %>">
-
-    
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="<%= @site.theme.css_url%>" rel="stylesheet">
+    <%= stylesheet_link_tag "application" %>
+    <%= stylesheet_link_tag "theme" %>
+
     <%= javascript_include_tag "jquery" %>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-    <%#= stylesheet_link_tag "theme/1/css/theme" %>
-    
     <%= csrf_meta_tags %>
+     
     <%= yield(:head) %>
-    <style type='text/css'>
-	  .container{
-	  	max-width: 800px;
-	  }
-	  .main{
-	  	background-color: #999;
-	  	color: #fff;
-	  	border-radius: 5px;
-	  }
-	  .sidebar{
-	  }
-	</style>
   </head>
-  <body>
-	<div class="navbar navbar-default">
-	    <div class="container">
-	      <div class="navbar-header">
-	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-	          <span class="icon-bar"></span>
-	          <span class="icon-bar"></span>
-	          <span class="icon-bar"></span>
-	        </button>
-	        <span class="navbar-brand"><%= @site.site_title %> </span>
-	        <%#= link_to @site.site_title, site_path(@site), :class => "navbar-brand" %>
-	      </div>
-	      <div class="navbar-collapse collapse navbar-responsive-collapse">
-	        <ul class="nav navbar-nav">
-	          <li><a href="#">关于我们</a></li>
-	          <li><a href="#">博文视点</a></li>
-	          <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">主题<b class="caret"></b></a>
-	            <ul class="dropdown-menu">
-	              <li><a href="#">移动互联网平台要靠内容赚钱</a></li>
-	              <li><a href="#">未来在“创意”方面创业会有更大发展</a></li>
-	              <li><a href="#">创业可以从写博客开始</a></li>
-	              <li class="divider"></li>
-	              <li class="dropdown-header">Dropdown header</li>
-	              <li><a href="#">Separated link</a></li>
-	              <li><a href="#">One more separated link</a></li>
-	            </ul>
-	          </li>
-	        </ul>
-	<!--         <form class="navbar-form navbar-left">
-	          <input type="text" class="form-control col-lg-8" placeholder="Search">
-	        </form> -->
-	        <ul class="nav navbar-nav navbar-right">
-	          <li><a href="#">留言</a></li>
-	          <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown">联系 <b class="caret"></b></a>
-	            <ul class="dropdown-menu">
-	              <li><a href="#">Action</a></li>
-	              <li><a href="#">Another action</a></li>
-	              <li><a href="#">Something else here</a></li>
-	              <li class="divider"></li>
-	              <li><a href="#">官方网站</a></li>
-	            </ul>
-	          </li>
-	        </ul>
-	      </div><!-- /.nav-collapse -->
-	    </div><!-- /.container -->
-	</div>
+  <body class="theme">
+    <%= yield(:header) %>
 
 	<div class="container">
-        <div class="row-fluid">
+    <div class="row-fluid">
 		  <div class="col-lg-9 main">
-		  <%= yield %>
+		    <%= render 'layouts/messages' %>
+		    <%= yield %>
 
-<!-- Duoshuo Comment BEGIN -->
-	<div class="ds-thread"></div>
-	<script type="text/javascript">
-	var duoshuoQuery = {short_name:"65960"};
-		(function() {
-			var ds = document.createElement('script');
-			ds.type = 'text/javascript';ds.async = true;
-			ds.src = 'http://static.duoshuo.com/embed.js';
-			ds.charset = 'UTF-8';
-			(document.getElementsByTagName('head')[0] 
-			|| document.getElementsByTagName('body')[0]).appendChild(ds);
-		})();
-	</script>
-<!-- Duoshuo Comment END -->	
+		    <!-- Duoshuo Comment BEGIN -->
+					<div class="ds-thread"></div>
+					<script type="text/javascript">
+					var duoshuoQuery = {short_name:"65960"};
+						(function() {
+							var ds = document.createElement('script');
+							ds.type = 'text/javascript';ds.async = true;
+							ds.src = 'http://static.duoshuo.com/embed.js';
+							ds.charset = 'UTF-8';
+							(document.getElementsByTagName('head')[0] 
+							|| document.getElementsByTagName('body')[0]).appendChild(ds);
+						})();
+					</script>
+				<!-- Duoshuo Comment END -->	
 
 		  </div>
 		  <div class="col-lg-3 sidebar"><%= yield(:sidebar) %></div>
 		</div>
 	</div>
 
+	<div class="container">
+    <div class="row-fluid">
+		  <div class="col-lg-12">
+				<%= yield(:footer) %>
+			</div>
+		</div>
+	</div>
+	
   </body>
 </html>
