--- a/app/views/layouts/theme.html.erb
+++ b/app/views/layouts/theme.html.erb
@@ -9,7 +9,8 @@
     <meta name="description" content="<%= yield(:meta_description) %>">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <%= stylesheet_link_tag "application" %>
+    <%#= stylesheet_link_tag "application" %>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     <%= stylesheet_link_tag "theme" %>
 
     <%= javascript_include_tag "jquery" %>
@@ -19,17 +20,67 @@
     <%= yield(:head) %>
   </head>
   <body class="theme">
+
+<div class="navbar navbar-fixed-top">
+<div class="container">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <span class="navbar-brand"><%= link_to "首页", site_path(@site) %></span>
+  </div>
+  <div class="navbar-collapse collapse navbar-responsive-collapse">
+    <ul class="nav navbar-nav">
+      <li><a href="<%= generate_site_post_url(@site, 'about')%>">关于我们</a></li>
+      <li><a href="<%= generate_site_post_url(@site, 'service')%>">服务项目</a></li>
+      <li><a href="<%= generate_site_post_url(@site, 'post_list')%>">行业视点</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">专题<b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <% @site.site_posts.select{|p| p.cate_id == SitePost.cate_id("专题")}.each do |site_post| %>
+            <li><%= link_to site_post.title, site_site_post_path(@site, site_post) %></li>
+          <% end %>
+        </ul>
+      </li>
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/sites/<%= @site.id %>/site_comments/new">留言</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">联系 <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+         <% @site.site_posts.select{|p| p.cate_id == SitePost.cate_id("联系我们")}.each do |site_post| %>
+            <li><%= link_to site_post.title, site_site_post_path(@site, site_post) %></li>
+          <% end %>
+          <li class="divider"></li>
+          <li class="dropdown-header"><%= @site.user.user_detail.company_nickname %></li>
+          <li><a href="<%= @site.user.user_detail.website %>" target="_blank">官方网站</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div><!-- /.nav-collapse -->
+</div><!-- /.container -->
+</div>
+
     <%= yield(:header) %>
 
 	<div class="container">
-    <div class="row-fluid">
-		  <div class="col-lg-9 main">
+        <div class="row-fluid">
+		  <div class="col-lg-12 main">
 		    <%= render 'layouts/messages' %>
 		    <%= yield %>
+		  </div>
+		</div>
+	</div>
 
-		    <!-- Duoshuo Comment BEGIN -->
-					<div class="ds-thread"></div>
-					<script type="text/javascript">
+	<div class="container">
+        <div class="row-fluid">
+		    <div class="col-lg-8">
+			    <!-- Duoshuo Comment BEGIN -->
+				<div class="ds-thread"></div>
+				<script type="text/javascript">
 					var duoshuoQuery = {short_name:"65960"};
 						(function() {
 							var ds = document.createElement('script');
@@ -39,11 +90,50 @@
 							(document.getElementsByTagName('head')[0] 
 							|| document.getElementsByTagName('body')[0]).appendChild(ds);
 						})();
-					</script>
+				</script>
 				<!-- Duoshuo Comment END -->	
-
-		  </div>
-		  <div class="col-lg-3 sidebar"><%= yield(:sidebar) %></div>
+			</div>
+			<div class="col-lg-4">
+			   <div class="well well-small">
+					<div class="accordion accordion-green" id="accordion2">
+					  <div class="accordion-group">
+					    <div class="accordion-heading">
+					      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+					        <%= @site.user.user_detail.company_nickname %>
+					      </a>
+					    </div>
+					    <div id="collapseOne" class="accordion-body collapse in">
+					      <div class="accordion-inner">
+							<%= @site.user.user_detail.region %>.
+							<%= @site.user.user_detail.city %>.
+							<%= @site.user.user_detail.district %>.<br>
+							<%= @site.user.user_detail.address %><hr>
+							<%= @site.user.user_detail.company_keywords %>
+					      </div>
+					    </div>
+					  </div>
+					  <div class="accordion-group">
+					    <div class="accordion-heading">
+					      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+					        联系我们
+					      </a>
+					    </div>
+					    <div id="collapseTwo" class="accordion-body collapse">
+					      <div class="accordion-inner">
+							联系人：<%= @site.user.user_detail.contact_name %><br>
+							<a target="_blank" href="http://wpa.qq.com/msgrd?v=3&amp;uin=77632132&amp;site=qq&amp;menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:77632132:41" alt="65960" title="65960"></a>
+							 &nbsp;|&nbsp;
+							<%= mail_to @site.user.user_detail.email, "发送邮件", cc: "master@65960.com", subject: "【65960】问题咨询" %>
+							 <br>
+							 手机：<%= @site.user.user_detail.mobile_phone %>
+							 <br>
+							<%= link_to_unless @site.user.user_detail.website.nil?, "访问官网", @site.user.user_detail.website, :target => '_blank' %>
+					      </div>
+					    </div>
+					  </div>
+					</div><!-- accordion -->
+				</div>
+			</div>
 		</div>
 	</div>
 
@@ -57,3 +147,5 @@
 	
   </body>
 </html>
+
+
