--- a/app/views/site_posts/_form.html.erb
+++ b/app/views/site_posts/_form.html.erb
@@ -16,8 +16,8 @@
       <%= f.association :site, as: :radio_buttons, label_method: :site_title %>
     </div>
     <div class="span6">
-      <label class="radio_buttons optional control-label">类别</label>
-      <%= f.collection_radio_buttons :cate_id, SitePost.cates.map{|s| [SitePost.cates.index(s), s]}, :first, :last, input_html: {class: 'input-block-level'}  %>
+      <label class="radio_buttons optional control-label">*类别(不能为空)</label>
+      <%= f.collection_radio_buttons :cate_id, SitePost.cates.map{|s| [SitePost.cates.index(s), s]}, :first, :last %>
     </div>
   </div>
 
